Fix SALAD-07: fix to add the behavior component adequately to the object. Everything now being printed properly